[gd_scene load_steps=3 format=2]

[ext_resource path="res://Interface/Counter.tres" type="Theme" id=1]
[ext_resource path="res://Interface/GameOver.gd" type="Script" id=2]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.494118 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 804.0
margin_top = 501.0
margin_right = 1116.0
margin_bottom = 579.0

[node name="AgainButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "Try Again?"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 312.0
margin_bottom = 78.0
theme = ExtResource( 1 )
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/AgainButton" to="." method="_on_AgainButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
